# gitmem

./: .gitignore  .umx-project  404.html  BOT_CONTRIBUTOR_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCTION_PLAN.md  README.md  dogfooding_tests_results_changes.md  gitmem-addendum-A1.md  gitmem-spec-v0_9.md  handoff-gemini-opencode.md  index.html  mkdocs.yml  objects.inv  plan.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  l2-review.yml
api/: index.html
api/config/: index.html
api/mcp-server/: index.html
api/models/: index.html
archive/tests/: test_budget.py  test_inject.py  test_models.py  test_pipeline.py  test_review_fixes.py  test_strength.py
archive/umx/: inject.py  memory.py  scope.py  strength.py
benchmarks/: RESULTS.md  __init__.py  _fixture_gen.py  _timing.py  conftest.py  test_dream.py  test_index.py  test_ingest.py  test_inject.py
cli/: index.html
concepts/: index.html
config/: index.html
doc_archive/: gitmem_spec_brainstorming.md  random_ideas.md  research_apr_9.md  umx-review-2026-04-09.md  umx-spec-v0_4.md  umx-spec-v0_5.md  umx-spec-v0_6.md  umx-spec-v0_7-plan.md  umx-spec-v0_7.md  umx-spec-v0_8.md  umx_spec_review_A.md  umx_spec_review_B.md  umx_spec_review_C.md  umx_spec_review_D.md  umx_spec_review_arbitration.md  v0.7-reviews.md  v0_7-gap-closure.md
docs/: cli.md  concepts.md  config.md  faq.md  gap-buildout-remaining.md  gap-verification-2026-05-31.md  governance-tutorial.md  index.md  launch-checklist.md  ops-runbook.md  privacy.md  quickstart.md  spec-gap-buildout.md  spec-parity.md  threat-model.md  upgrade-0.9-to-1.0.md
docs/api/: config.md  index.md  mcp-server.md  models.md
docs/reviews/: glm5.1_spec_review.md
faq/: index.html
gap-buildout-remaining/: index.html
gap-verification-2026-05-31/: index.html
governance-tutorial/: index.html
launch-checklist/: index.html
ops-runbook/: index.html
privacy/: index.html
quickstart/: index.html
reviews/glm5.1_spec_review/: index.html
search/: search_index.json
spec-gap-buildout/: index.html
spec-parity/: index.html
tests/: conftest.py  secret_literals.py  test_actions.py  test_adapters_gitignore.py  test_amp_capture.py  test_api_docstrings.py  test_backup.py  test_beir_eval.py  test_benchmark_llm.py  test_blobs.py  test_bridge.py  test_calibration.py  test_claude_cli_provider.py  test_claude_code_capture.py  test_claude_code_hooks.py  test_cli.py  test_cli_extras.py  test_codebase.py  test_codex_capture.py  test_commands.py  test_conflict.py  test_continuity_artifacts_chronicles.py  test_conventions.py  test_convomem_eval.py  test_copilot_capture.py  test_cross_project.py  test_docs_site.py  test_doctor.py  test_dogfood_readiness.py  test_dream.py  test_dream_providers.py  test_dream_prune.py  test_e2e.py  test_embedding_backends.py  test_eval_compare.py  test_extract_llm.py  test_fact_actions.py  test_gemini_capture.py  test_gemini_cli_provider.py  test_git_ops.py  (+51 more)
threat-model/: index.html
umx/: __init__.py  actions.py  aip.py  amp_capture.py  artifacts.py  audit.py  backup.py  beir_eval.py  benchmark_llm.py  blobs.py  bridge.py  budget.py  calibration.py  chronicles.py  claude_code_capture.py  claude_code_hooks.py  cli.py  codebase.py  codex_capture.py  collect.py  config.py  continuity.py  conventions.py  convomem_eval.py  copilot_capture.py  cross_project.py  doctor.py  eval_compare.py  fact_actions.py  gemini_capture.py  git_ops.py  github_ops.py  governance.py  governance_health.py  identity.py  inject.py  inject_eval.py  inline_metadata.py  locomo_eval.py  long_memory_eval.py  (+32 more)
umx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
umx/adapters/: __init__.py  aider.py  claude_code.py  copilot.py  gemini.py  generic.py
umx/dream/: __init__.py  anchors.py  conflict.py  consolidation.py  decay.py  entrenchment.py  extract.py  extract_llm.py  gates.py  gitignore.py  imx_triggers.py  l2_eval.py  l2_review.py  lint.py  notice.py  (+7 more)
upgrade-0.9-to-1.0/: index.html
(+80 files in other folders)
