[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umx"
version = "0.4.0"
description = "Universal Memory Exchange — tool-agnostic, filesystem-native memory for CLI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "umx contributors" }]
keywords = ["ai", "memory", "cli", "agents", "coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
umx = "umx.cli:main"

[tool.setuptools.packages.find]
include = ["umx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
