[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umx"
version = "0.9.1"
description = "Universal Memory Exchange - git-native shared memory for CLI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "umx contributors" }]
keywords = ["ai", "memory", "cli", "agents", "gitmem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/dev-boz/gitmem"
Repository = "https://github.com/dev-boz/gitmem"
Changelog = "https://github.com/dev-boz/gitmem/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
embeddings = [
    "sentence-transformers>=3.0",
]

[project.scripts]
umx = "umx.cli:main"

[tool.setuptools.packages.find]
include = ["umx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
