[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umx"
version = "0.9.2"
description = "gitmem: the reference implementation of the UMX specification for git-native agent memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "umx contributors" }]
keywords = ["ai", "memory", "cli", "agents", "gitmem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/dev-boz/gitmem"
Repository = "https://github.com/dev-boz/gitmem"
Changelog = "https://github.com/dev-boz/gitmem/blob/main/CHANGELOG.md"
Documentation = "https://dev-boz.github.io/gitmem/"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "jinja2==2.11.2",
    "pytest>=8.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.28",
]
embeddings = [
    "sentence-transformers>=3.0",
]

[project.scripts]
umx = "umx.cli:main"
gitmem = "umx.cli:main"
aip-mem = "umx.aip:mem_main"

[tool.setuptools.packages.find]
include = ["umx*"]

[tool.setuptools.package-data]
umx = ["viewer/templates/*.html", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
